<resources>
    <string name="app_name">Thrifty</string>

    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>

    <string-array name="shop">
        <item>women_clothes</item>
        <item>men_clothes</item>
        <item>kids_clothes</item>
        <item>watches</item>
        <item>belts</item>
        <item>accessories</item>
    </string-array>

    <string-array name="size">
        <item>small</item>
        <item>meduim</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_second_hand_clothes_online">Buy second hand clothes online!</string>
    <string name="next">Next</string>
    <string name="save_your_money">Save your money!</string>
    <string name="get_started">Get Started!</string>
    <string name="accessories">Accessories</string>
    <string name="accessories">Accessories</string>
    <string name="admin">Admin</string>
    <string name="add_products">add products</string>
    <string name="product_name">product name</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="category">category</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="size">size</string>
    <string name="color">color</string>
    <string name="color">color</string>
    <string name="upload_image">upload image</string>
    <string name="belts">Belts</string>
    <string name="belts">Belts</string>
    <string name="cart">Cart</string>
    <string name="price_for_each_one">price for each one:</string>
    <string name="checkout">Checkout</string>
    <string name="categories">Categories</string>
    <string name="women_clothes">Women Clothes</string>
    <string name="men_clothes">Men Clothes</string>
    <string name="kids_clothes">Kids Clothes</string>
    <string name="watches">Watches</string>
    <string name="belts">Belts</string>
    <string name="accessories">Accessories</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="credit_card">Credit card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry date</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="wish_list">Wish List</string>
    <string name="kids_clothes">Kids Clothes</string>
    <string name="kids_clothes">Kids Clothes</string>
    <string name="home">Home</string>
    <string name="new_item">New Item</string>
    <string name="popular">Popular</string>
    <string name="suggested_items">Suggested Items</string>
    <string name="men_clothes">Men Clothes</string>
    <string name="men_clothes">Men Clothes</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="order_pickup">Order Pickup</string>
    <string name="item">Item</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="share_this_product">share this product</string>
    <string name="title">Title</string>
    <string name="some_text">Some text</string>
    <string name="profile">Profile</string>
    <string name="ssd_coders">SSD Coders</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="_962_7999999">962 7999999</string>
    <string name="ssdcoders_gmail_com">ssdcoders@gmail.com</string>
    <string name="track_order">Track Order</string>
    <string name="track_order">Track Order</string>
    <string name="add_product">Add product</string>
    <string name="search">Search</string>
    <string name="type_anything">Type Anything</string>
    <string name="first_category">First Category</string>
    <string name="second_category">Second Category</string>
    <string name="third_category">Third Category</string>
    <string name="see_all_categories">See All Categories</string>
    <string name="signin">SignIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="fullname">Fullname</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_phone_number">your Phone number</string>
    <string name="nawal_ahmad">Nawal Ahmad</string>
    <string name="abdelqader_al_omari">Abdelqader Al-Omari</string>
    <string name="khair_shkokany">Khair Shkokany</string>
    <string name="mohammad_alkhateeb">Mohammad AlKhateeb</string>
    <string name="heba_al_momany">Heba Al-Momany</string>
    <string name="sara_al_shater">Sara Al-Shater</string>
    <string name="jamal_wari">Jamal Wari</string>
    <string name="our_team">Our Team</string>
    <string name="order_track">Order Track</string>
    <string name="cancel">Cancel</string>
    <string name="estimated_time">Estimated time</string>
    <string name="order_nomber">Order nomber</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_4401">#4401</string>
    <string name="we_have_receved_your_order">We have Receved Your Order!</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_recieved">Order ٌRecieved</string>
    <string name="your_order_has_been_confirmed">Your Order has been Confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="we_are_preparing_your_order">We are preparing your order</string>
    <string name="order_ready_to_pickup">Order ready to pickup</string>
    <string name="your_order_ready_to_pickup">Your Order ready to pickup</string>
    <string name="watches">Watches</string>
    <string name="watches">Watches</string>
    <string name="women_clothes">Women Clothes</string>
    <string name="women_clothes">Women Clothes</string>
    <string name="item_name">Item name</string>
    <string name="category">category</string>
    <string name="_10jd">10JD</string>
    <string name="view">view</string>
    <string name="product_name">product name</string>
    <string name="_10jd">10JD</string>
    <string name="item_name">Item name</string>
    <string name="category">category</string>
    <string name="view">view</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>

</resources>