<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="380dp"
    android:layout_height="200dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/idIVCourseImage"
            android:layout_width="121dp"
            android:layout_height="131dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/_9ea5873c3b7f3370b296ac829443658" />
        <TextView
            android:id="@+id/price"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="182dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="100dp"
            android:background="@color/white"
            android:text="@string/_10jd"
            android:textColor="@color/grey"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/titlefrag1"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="62dp"
            android:text="@string/item_name"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/categoryfrag"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="91dp"
            android:layout_marginBottom="120dp"
            android:drawablePadding="2dp"
            android:text="@string/category"
            tools:layout_marginStart="16dp" />
        <Button
            android:id="@+id/button3"
            android:layout_width="161dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="176dp"
            android:layout_marginBottom="53dp"
            android:backgroundTint="@color/purple"
            android:text="@string/view"
            android:textColor="@color/white" />
        <ImageView
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="61dp"
            app:srcCompat="@drawable/full_heart_button" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>