<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="220dp"
    android:layout_height="350dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="320dp">


        <!--Text View to display Course Name-->

        <!--Text VIew to display COurse Rating-->
        <!--Image used in present in drawable folder-->

        <ImageView
            android:id="@+id/idIVCourseImage"
            android:layout_width="175dp"
            android:layout_height="180dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/_9ea5873c3b7f3370b296ac829443658" />

        <TextView
            android:id="@+id/price"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="121dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="35dp"
            android:background="@color/white"
            android:text="@string/_10jd"
            android:textColor="@color/grey"
            android:textSize="20sp" />


        <!--        <Button-->
        <!--            android:id="@+id/button2"-->
        <!--            android:layout_width="38dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@id/categoryfrag"-->
        <!--            android:layout_marginStart="20dp"-->
        <!--            android:layout_marginTop="1dp"-->
        <!--            android:backgroundTint="@color/white"-->

        <!--            app:cornerRadius="40dp" />-->


        <TextView
            android:id="@+id/titlefrag1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:layout_marginStart="14dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="10dp"
            android:text="@string/item_name"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/categoryfrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="79dp"
            android:drawablePadding="2dp"
            android:text="@string/category"
            tools:layout_marginStart="15dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/purple"
            android:text="@string/view"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="9dp"
            app:srcCompat="@drawable/full_heart_button" />

        <TextView
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idIVCourseImage"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <!--        <Button-->
        <!--            android:id="@+id/button2"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_alignParentStart="true"-->
        <!--            android:layout_alignParentBottom="true"-->
        <!--            android:layout_marginStart="14dp"-->
        <!--            android:layout_marginBottom="15dp"-->
        <!--            android:text="View" />-->


    </RelativeLayout>
</androidx.cardview.widget.CardView>